tests/error/comptime/pointer_arithmetic06.bz
// error: invalid pointer arithmetic operation with type '?*int32' and offset 1
// note: while evaluating expression at compile time
// note: address points to this stack object, which is outside its lifetime
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		mut p: ?*int32 = null;
		{
			let i = 0;
			p = &i;
		}
		p + 1;
	});
}
